--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -206,7 +206,7 @@
     <div class="about-hero">
       <h1>Taishi Okano</h1>
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/taishiokano" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/taishi-okano/" target="_blank">LinkedIn</a>
         <a href="https://medium.com/@taishi.okano" target="_blank">Medium</a>
         <a href="https://taishi-okano.hashnode.dev/" target="_blank">Hashnode</a>
         <a href="https://notion.site/..." target="_blank">Notion</a>
